2005-11-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	* avr-libc-spec.in: Update to match reality.
	patch #4627: spec file fixup for 1.2 branch

2005-11-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dmitry Xmelkov:
	* libm/fplib/pow.S: reimplement.
	Fixes bug #14852: fp pow function broken for negative x

2005-11-15 Anatoly Sokolov <aesok@post.ru>

	Submitted by Peeter Vois:
	* libm/fplib/mulsf3x.S: use MUL instruction in group avr4, 
	avr5 devices; make labels local, add Id line.
	[patch #4557] Adds to the fplib usage of MUL instruction 
                      in group avr4; avr5 devices

2005-11-13 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/fp_split.S: Make labels local.
	* libm/fplib/tanh.S: speedup tanh function.
	patch #3592: speedup tanh function in libm

2005-11-11 Anatoly Sokolov <aesok@post.ru>

	* common/macros.inc(X_movw): Adds the possibility to use 
	upper case latters in register names: R0..R31.
	(Patch submitted by Dmitry Xmelkov.)
	(LOAD_X): Deleted.
	(LOAD_Z): Deleted.

2005-11-11 Anatoly Sokolov <aesok@pautinka.net>

	* include/math.h (exp): Rename argument.
	(inverse): Deleted.
	[Fixed bug #13340]

2005-11-11 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.2.6.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* fplib/fmod.S: Make labels local, add Id line.
	[Fixed bug #3573]

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* crt1/gcrt1.S: Make labels local, add Id line.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdlib/ctype.S (isxdigit, ispunct, tolower, 
	toupper): Make labels local.
	* libc/stdlib/setjmp.S: add Id line.
	(setjmp): use X_movw instead LOAD_Z.
	(longjmp): use X_movw instead LOAD_X, use X_movw when possible.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdlib/atoi.S: Make labels local, 
	use X_movw instead LOAD_Z.
	* libc/stdlib/atol.S: Make labels local, add Id line, 
	use X_movw instead LOAD_Z.

2005-11-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
