@@ -85,10 +85,10 @@
 */
 
 #if !defined(DOXYGEN)
-static void _delay_loop_1(uint8_t __count) __attribute__((always_inline));
-static void _delay_loop_2(uint16_t __count) __attribute__((always_inline));
-static void _delay_us(double __us) __attribute__((always_inline));
-static void _delay_ms(double __ms) __attribute__((always_inline));
+static inline void _delay_loop_1(uint8_t __count) __attribute__((always_inline));
+static inline void _delay_loop_2(uint16_t __count) __attribute__((always_inline));
+static inline void _delay_us(double __us) __attribute__((always_inline));
+static inline void _delay_ms(double __ms) __attribute__((always_inline));
 #endif
 
 /** \ingroup avr_delay
