@@ -4,6 +4,7 @@
 
   [#13340] Math lib documentation/lib mismatch
   [#14852] fp pow function broken for negative x
+  [#15161] util/delay.h misses inline keyword (regression)
 
 * Other changes:
 
